force-app/cmsUtilities/cmsEdition/objects/sfpegPageSettings__c/sfpegPageSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the sfpegPageEditor component</description>
    <label>sfpegPageSettings</label>
</CustomObject>