force-app/cmsUtilities/cmsEdition/objects/sfpegPageSettings__c/fields/IconExtension__c.field-meta.xml
<CustomField>
    <fullName>IconExtension__c</fullName>
    <description>Extension of files containing the icons, starting with a dot (e.g. .svg)</description>
    <inlineHelpText>Extension of files containing the icons, starting with a dot (e.g. .svg)</inlineHelpText>
    <label>Icon File Extension</label>
    <length>25</length>
    <type>Text</type>
</CustomField>