force-app/cmsUtilities/cmsEdition/objects/sfpegPageSettings__c/fields/IconFilesResource__c.field-meta.xml
<CustomField>
    <fullName>IconFilesResource__c</fullName>
    <description>Name of the static resource containing the actual icon files</description>
    <inlineHelpText>Name of the static resource containing the actual icon files</inlineHelpText>
    <label>Icon Files Resource</label>
    <length>25</length>
    <type>Text</type>
</CustomField>