force-app/cmsUtilities/cmsEdition/objects/sfpegPageSettings__c/fields/IconNameResource__c.field-meta.xml
<CustomField>
    <fullName>IconNameResource__c</fullName>
    <description>Name of the static resource containing the JSON list of available icon names</description>
    <inlineHelpText>Name of the static resource containing the JSON list of available icon names</inlineHelpText>
    <label>Icon Name Resource</label>
    <length>25</length>
    <type>Text</type>
</CustomField>